cdk.out/Vpc2.template.json
{
 "Resources": {
  "VPC01E6A6F7D5": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/Resource"
   }
  },
  "VPC01PublicSubnet1SubnetFD569073": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/Subnet"
   }
  },
  "VPC01PublicSubnet1RouteTableB66C786B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/RouteTable"
   }
  },
  "VPC01PublicSubnet1RouteTableAssociation735ECE03": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PublicSubnet1RouteTableB66C786B"
    },
    "SubnetId": {
     "Ref": "VPC01PublicSubnet1SubnetFD569073"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VPC01PublicSubnet1DefaultRoute3B38A685": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PublicSubnet1RouteTableB66C786B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPC01IGW4C4FB432"
    }
   },
   "DependsOn": [
    "VPC01VPCGW3F20364F"
   ],
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/DefaultRoute"
   }
  },
  "VPC01PublicSubnet1EIP1048F9E9": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/EIP"
   }
  },
  "VPC01PublicSubnet1NATGatewayEADA63F1": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VPC01PublicSubnet1SubnetFD569073"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VPC01PublicSubnet1EIP1048F9E9",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet1/NATGateway"
   }
  },
  "VPC01PublicSubnet2Subnet25F6684C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/Subnet"
   }
  },
  "VPC01PublicSubnet2RouteTableF13FDF7F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/RouteTable"
   }
  },
  "VPC01PublicSubnet2RouteTableAssociationE2D779F1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PublicSubnet2RouteTableF13FDF7F"
    },
    "SubnetId": {
     "Ref": "VPC01PublicSubnet2Subnet25F6684C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VPC01PublicSubnet2DefaultRouteFB18B3CF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PublicSubnet2RouteTableF13FDF7F"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VPC01IGW4C4FB432"
    }
   },
   "DependsOn": [
    "VPC01VPCGW3F20364F"
   ],
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/DefaultRoute"
   }
  },
  "VPC01PublicSubnet2EIP0F50C018": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/EIP"
   }
  },
  "VPC01PublicSubnet2NATGateway9D720FF5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "VPC01PublicSubnet2Subnet25F6684C"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "VPC01PublicSubnet2EIP0F50C018",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PublicSubnet2/NATGateway"
   }
  },
  "VPC01PrivateSubnet1SubnetCDB5A57D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet1/Subnet"
   }
  },
  "VPC01PrivateSubnet1RouteTableA293083A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet1/RouteTable"
   }
  },
  "VPC01PrivateSubnet1RouteTableAssociation8FE49A7B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PrivateSubnet1RouteTableA293083A"
    },
    "SubnetId": {
     "Ref": "VPC01PrivateSubnet1SubnetCDB5A57D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VPC01PrivateSubnet1DefaultRoute1E998590": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PrivateSubnet1RouteTableA293083A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPC01PublicSubnet1NATGatewayEADA63F1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet1/DefaultRoute"
   }
  },
  "VPC01PrivateSubnet2Subnet221834A9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet2/Subnet"
   }
  },
  "VPC01PrivateSubnet2RouteTable5E8E3F58": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet2/RouteTable"
   }
  },
  "VPC01PrivateSubnet2RouteTableAssociation23EF0197": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PrivateSubnet2RouteTable5E8E3F58"
    },
    "SubnetId": {
     "Ref": "VPC01PrivateSubnet2Subnet221834A9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VPC01PrivateSubnet2DefaultRoute026C8F09": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "VPC01PrivateSubnet2RouteTable5E8E3F58"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VPC01PublicSubnet2NATGateway9D720FF5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/PrivateSubnet2/DefaultRoute"
   }
  },
  "VPC01IGW4C4FB432": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "Vpc2/VPC-01"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/IGW"
   }
  },
  "VPC01VPCGW3F20364F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "VPC01E6A6F7D5"
    },
    "InternetGatewayId": {
     "Ref": "VPC01IGW4C4FB432"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/VPC-01/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/02PQQ+CMAyFf4v3MQUvXgkxBg+GoOFqyqixApthncQY/7tMVDz168vL62skl6EMZ9DbQFV10FApH3sGVYtBOqKK5KO4KpGcdJElInNlQ2rvSo3stYly4xgPUDY46ZMWW2sUAZPRP7OHdZr5sQPeAGMPd5F1dBtwCk41Yzfw1zA2+WwxD1XPLWp+ihytcZ165/5zYnRF/vJTbOEG83AlF9L/fLFEQec0U4syH+cLOh18IA8BAAA="
   },
   "Metadata": {
    "aws:cdk:path": "Vpc2/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
